# edu-journey

./: README.md  pyproject.toml
assets/notebooks/: 2023-CHEMISTRY-HT-P1.ipynb
