[tool.poetry]
name = "edu-journey"
version = "0.1.0"
description = "Education Journey"
authors = ["Abrar Mudhir <abrarmudhir@outlook.com>"]
readme = "README.md"
packages=[{ include="app"},]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
